--- a/views/login.ejs
+++ b/views/login.ejs
@@ -52,12 +52,12 @@
                     <form action="http://webapplayers.com/luna_admin-v1.1/index.html" id="loginForm" novalidate>
                         <div class="form-group">
                             <label class="control-label" for="username">Usuario</label>
-                            <input type="text" title="Please enter you username" required="" value="" name="username" id="username" class="form-control">
+                            <input type="text" title="Please enter you username" required="" value="" name="username" id="username" class="form-control" placeholder="Ingrese Usuario">
                             <br>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="password">Contraseña</label>
-                            <input type="password" title="Please enter your password" required="" value="" name="password" id="password" class="form-control">
+                            <input type="password" title="Please enter your password" required="" value="" name="password" id="password" class="form-control" placeholder="**********">
                             <br>
                         </div>
                         <div>
