--- a/views/registro_producto.ejs
+++ b/views/registro_producto.ejs
@@ -37,6 +37,14 @@
                                     <div class="col-sm-10"><input type="text" class="form-control" id="inputEmail3" placeholder="Ingrese el Nombre del Producto"></div>
                                 </div>
 
+                                <div class="form-group"><label for="inputEmail3" class="col-sm-2 control-label">Categoria</label>
+                                    <div class="col-sm-10"><select class="form-control" id="categoria">
+                                        <option value="opcion1">Bebidas</option>
+                                        <option value="opcion2">Galletas</option>
+                                        <option value="opcion3">Limpieza</option>
+                                    </select></div>
+                                </div>
+
                                 <div class="form-group"><label for="inputEmail3" class="col-sm-2 control-label">Fecha de Ingreso</label>
                                     <div class="col-sm-10"><input type="date" class="form-control" id="inputEmail3"></div>
                                 </div>
@@ -46,12 +54,14 @@
                                 </div>
 
                                 <div class="form-group"><label for="inputEmail3" class="col-sm-2 control-label">Cantidad</label>
-                                    <div class="col-sm-10"><input type="number" class="form-control" id="inputEmail3" placeholder="Ingrese la cantidad"></div>
+                                    <div class="col-sm-10"><input type="number" class="form-control" id="inputEmail3" placeholder="0"></div>
                                 </div>
 
-                                <div class="form-group"><label for="inputEmail3" class="col-sm-2 control-label">Cantidad</label>
-                                    <div class="col-sm-10"><input type="number" class="form-control" id="inputEmail3" placeholder="Ingrese el precio"></div>
+                                <div class="form-group"><label for="inputEmail3" class="col-sm-2 control-label">Precio</label>
+                                    <div class="col-sm-10"><input type="number" class="form-control" id="inputEmail3" placeholder="0.00"></div>
                                 </div>
+
+                                <a href="#"  class="btn btn-w-md btn-success">Registrar</a>
 
                             </form>
                         </div>
