--- a/views/historial_transacciones.ejs
+++ b/views/historial_transacciones.ejs
@@ -8,7 +8,18 @@
 
                     </div>
                     <div class="panel-body">
-                        <h2>Registro de Ventas</h2>
+                        <div class="view-header">
+                            <div class="header-icon">
+                                <i class="pe-7s-note
+                                pe-7s-unlock"></i>
+                            </div>
+                            <div class="header-title">
+                                <h3>Registro de Ventas</h3>
+                                <small>
+                                    Control de Ventas
+                                </small>
+                            </div>
+                        </div>
                         <hr>
                         <div class="table-responsive">
                             <table id="tableExample3" class="table table-striped table-hover">
