--- a/views/notificaciones.ejs
+++ b/views/notificaciones.ejs
@@ -50,7 +50,7 @@
                                             <span class="vertical-date pull-right"> Jueves <br/> <small>12:17:43 PM</small> </span>
 
                                             <h2>Alerta</h2>
-                                            <p>En el almacen solo hay 15 unidades del producto "Galletas Rellenitas"
+                                            <p>El producto "Galletas Rellenitas" vencera el proximo "12/12/2023"
                                         </div>
                                     </div>
                                 </div>
@@ -76,7 +76,7 @@
                                             <span class="vertical-date pull-right"> Martes <br/> <small>12:17:43 PM</small> </span>
 
                                             <h2>Alerta</h2>
-                                            <p>En el almacen solo hay 15 unidades del producto "Cerveza Pilse"
+                                            <p>El producto "Cerveza Pilse" vencera el proximo "12/12/2023"
                                         </div>
                                     </div>
                                 </div>
@@ -102,7 +102,7 @@
                                             <span class="vertical-date pull-right"> Lunes <br/> <small>12:17:43 PM</small> </span>
 
                                             <h2>Alerta</h2>
-                                            <p>En el almacen solo hay 10 unidades del producto "Gaseosa Fanta"
+                                            <p>El producto "Galletas Soda" vencera el proximo "12/12/2023"
                                         </div>
                                     </div>
                                 </div>
