--- a/views/registro_producto.ejs
+++ b/views/registro_producto.ejs
@@ -7,7 +7,7 @@
                 <div class="col-lg-12">
                     <div class="view-header">
                         <div class="header-icon">
-                            <i class="pe page-header-icon pe-7s-note2"></i>
+                            <i class="pe page-header-icon pe-7s-box2"></i>
                         </div>
                         <div class="header-title">
                             <h3>Registro de Productos</h3>
